// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestFormFieldBuilderContainer Doesn't fail on empty metadata 1`] = `
<DocumentFragment>
  <span />
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders single body input 1`] = `
<DocumentFragment>
  <div
    class="bp3-control-group"
  >
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Body
          </span>
        </button>
      </span>
    </span>
    <span
      class="bp3-popover-wrapper"
    >
      <span
        class="bp3-popover-target"
      >
        <button
          class="bp3-button"
          tabindex="0"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-more"
            icon="more"
          >
            <svg
              data-icon="more"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                more
              </desc>
              <path
                d="M2 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM14 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4zM8 6.03a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </span>
    </span>
    <div
      class="bp3-input-group"
    >
      <input
        class="bp3-input"
        placeholder="JSON"
        style="padding-right: 10px;"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form int field 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Int Field
              </span>
            </button>
          </span>
        </span>
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="Int"
            style="padding-right: 10px;"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form multiple top level fields 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Field 1
              </span>
            </button>
          </span>
        </span>
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="Double"
            style="padding-right: 10px;"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Field 2
              </span>
            </button>
          </span>
        </span>
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="Int"
            style="padding-right: 10px;"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Field 3
              </span>
            </button>
          </span>
        </span>
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="Long"
            style="padding-right: 10px;"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Field 4
              </span>
            </button>
          </span>
        </span>
        <div
          class="bp3-input-group"
        >
          <input
            class="bp3-input"
            placeholder="Short"
            style="padding-right: 10px;"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form nested int field 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div
        class="bp3-control-group"
      >
        <span
          class="bp3-popover-wrapper"
        >
          <span
            class="bp3-popover-target"
          >
            <button
              class="bp3-button"
              tabindex="0"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Nested Int Field
              </span>
            </button>
          </span>
        </span>
      </div>
      <div
        class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
      >
        <div>
          <div
            class="bp3-control-group"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    Int Field
                  </span>
                </button>
              </span>
            </span>
            <div
              class="bp3-input-group"
            >
              <input
                class="bp3-input"
                placeholder="Int"
                style="padding-right: 10px;"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated double field 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div>
        <div
          class="bp3-control-group"
        >
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-repeat"
                  icon="repeat"
                >
                  <svg
                    data-icon="repeat"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      repeat
                    </desc>
                    <path
                      d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 0 0 8 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  Repeated Double Field
                </span>
              </button>
            </span>
          </span>
          <span
            class="bp3-popover-wrapper"
          >
            <span
              class="bp3-popover-target"
            >
              <button
                class="bp3-button"
                tabindex="0"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-plus"
                  icon="plus"
                >
                  <svg
                    data-icon="plus"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      plus
                    </desc>
                    <path
                      d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </span>
          <span />
          <div
            class="bp3-input-group"
          >
            <input
              class="bp3-input"
              placeholder="Double"
              style="padding-right: 10px;"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested int field 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div
        class="bp3-control-group"
      >
        <span />
      </div>
      <div
        class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
      >
        <div>
          <div
            class="bp3-control-group"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-repeat"
                    icon="repeat"
                  >
                    <svg
                      data-icon="repeat"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        repeat
                      </desc>
                      <path
                        d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 0 0 8 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Repeated Nested Int Field
                  </span>
                </button>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span />
          </div>
          <div
            class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
          >
            <div>
              <div
                class="bp3-control-group"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Nested Int Field
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
              >
                <div>
                  <div
                    class="bp3-control-group"
                  >
                    <span
                      class="bp3-popover-wrapper"
                    >
                      <span
                        class="bp3-popover-target"
                      >
                        <button
                          class="bp3-button"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            Int Field
                          </span>
                        </button>
                      </span>
                    </span>
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        class="bp3-input"
                        placeholder="Int"
                        style="padding-right: 10px;"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`RequestFormFieldBuilderContainer Renders typed form repeated nested repeated double field 1`] = `
<DocumentFragment>
  <div
    class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
  >
    <div>
      <div
        class="bp3-control-group"
      >
        <span />
      </div>
      <div
        class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
      >
        <div>
          <div
            class="bp3-control-group"
          >
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-repeat"
                    icon="repeat"
                  >
                    <svg
                      data-icon="repeat"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        repeat
                      </desc>
                      <path
                        d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 0 0 8 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    Nested Repeated Double Field
                  </span>
                </button>
              </span>
            </span>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <button
                  class="bp3-button"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </button>
              </span>
            </span>
            <span />
          </div>
          <div
            class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
          >
            <div>
              <div
                class="bp3-control-group"
              >
                <span
                  class="bp3-popover-wrapper"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Nested Double Field
                      </span>
                    </button>
                  </span>
                </span>
              </div>
              <div
                class="bp3-card bp3-elevation-0 sc-bZQynM cLWGOp"
              >
                <div>
                  <div>
                    <div
                      class="bp3-control-group"
                    >
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-repeat"
                              icon="repeat"
                            >
                              <svg
                                data-icon="repeat"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  repeat
                                </desc>
                                <path
                                  d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 0 0 8 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                            <span
                              class="bp3-button-text"
                            >
                              Repeated Double Field
                            </span>
                          </button>
                        </span>
                      </span>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <button
                            class="bp3-button"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="bp3-icon bp3-icon-plus"
                              icon="plus"
                            >
                              <svg
                                data-icon="plus"
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                              >
                                <desc>
                                  plus
                                </desc>
                                <path
                                  d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </button>
                        </span>
                      </span>
                      <span />
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          class="bp3-input"
                          placeholder="Double"
                          style="padding-right: 10px;"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
